--- a/hockey.html
+++ b/hockey.html
@@ -538,26 +538,26 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <div>
             <h2 class="text-xl font-bold">Your Name</h2>
-            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Your Name">
+            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Enter your full name">
           </div>
           <div>
             <h2 class="text-xl font-bold">Your Email</h2>
-            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Your Email">
+            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Enter your email">
           </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
           <div>
             <h2 class="text-xl font-bold">Subject</h2>
-            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Subject">
+            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Enter your subject">
           </div>
           <div>
             <h2 class="text-xl font-bold">Phone Number</h2>
-            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Phone Number">
+            <input class="bg-slate-100 w-full mt-4 px-4 py-2 rounded-lg outline-none" type="text" placeholder="Enter your phone number">
           </div>
         </div>
         <div class="grid grid-cols-1  mt-8">
           <h2 class="text-xl font-bold">Messager</h2>
-           <textarea name="" class="bg-slate-100 outline-none p-2" id="" rows="8" placeholder="type your message her"></textarea>
+           <textarea name="" class="bg-slate-100 outline-none p-2" id="" rows="8" placeholder="Write your message"></textarea>
         </div>
         <button class="btn btn-active bg-[#FF4240] w-full mt-4 btn btn-primary border-none -pb-5">Send Message</button>
       </div>
