--- a/hockey.html
+++ b/hockey.html
@@ -91,29 +91,29 @@
   <div id="slide1" class="carousel-item relative w-full">
     <img src="./Images/1.png" class="w-full" />
     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide4" class="btn btn-circle">❮</a> 
-      <a href="#slide2" class="btn btn-circle">❯</a>
+      <a href="#slide4" class="btn btn-neutral rounded-full">❮</a> 
+      <a href="#slide2" class="btn btn-neutral rounded-full">❯</a>
     </div>
   </div> 
   <div id="slide2" class="carousel-item relative w-full">
     <img src="https://assets-eu-01.kc-usercontent.com/d66c6a48-e05a-01b8-e0ec-59ee93833239/8563c19d-66f3-4a86-ae59-d91db44dcc82/Samuel%20-%20Flyerz%20Hockey%20compressed.jpg?auto=format&w=2250&fit=crop&q=85" class="w-full" />
     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide1" class="btn btn-circle">❮</a> 
-      <a href="#slide3" class="btn btn-circle">❯</a>
+      <a href="#slide1" class="btn btn-neutral rounded-full">❮</a> 
+      <a href="#slide3" class="btn btn-neutral rounded-full">❯</a>
     </div>
   </div> 
   <div id="slide3" class="carousel-item relative w-full">
     <img src="https://assets-eu-01.kc-usercontent.com/d66c6a48-e05a-01b8-e0ec-59ee93833239/cee02891-4bfa-4867-b65a-c9077d4b6b41/Kath.jpg?auto=format&w=2250&fit=crop&q=85" class="w-full" />
     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide2" class="btn btn-circle">❮</a> 
-      <a href="#slide4" class="btn btn-circle">❯</a>
+      <a href="#slide2" class="btn btn-neutral rounded-full">❮</a> 
+      <a href="#slide4" class="btn btn-neutral rounded-full">❯</a>
     </div>
   </div> 
   <div id="slide4" class="carousel-item relative w-full">
     <img src="https://cdn.dhakapost.com/media/imgAll/BG/2023May/untitled-2-20230520185018.jpg" class="w-full" />
     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide3" class="btn btn-circle">❮</a> 
-      <a href="#slide1" class="btn btn-circle">❯</a>
+      <a href="#slide3" class="btn btn-neutral rounded-full">❮</a> 
+      <a href="#slide1" class="btn btn-neutral rounded-full">❯</a>
     
       
     </div>
